[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loopiase"
version = "0.0.1"
description = "Python client library for the Loopia API"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pyright>=1.1",
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
    "myst-parser>=4.0",
]

[project.urls]
Homepage = "https://github.com/DigitalTolk/loopiase-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["loopiase"]
